--- a/dev/src/style/reset.scss
+++ b/dev/src/style/reset.scss
@@ -6,8 +6,7 @@
 * {
   box-sizing: border-box;
   background-repeat: no-repeat;
-  word-break: break-all;
-  font-family:"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
+  font-family:"PingFang SC",Arial,"Hiragino Sans GB","Microsoft YaHei","微软雅黑",sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -17,10 +16,20 @@ html {
   -moz-tab-size: 4;
   tab-size: 4;
   width: 100vw;height: 100vh;
+  scroll-behavior: smooth!important;
 }
 body{
   width: 100%;height: 100%;
   margin: 0;
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
+}
+// 去除 ios 上的微信点击蓝色边框
+a:focus,
+input:focus,
+p:focus,
+div:focus{
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
+  //-webkit-user-modify:read-write-plaintext-only;
 }
 ::before, ::after {
   background-repeat: no-repeat; /* Set `background-repeat: no-repeat` to all elements and pseudo elements */
@@ -69,11 +78,9 @@ q::before,q::after{
   content: '';
 }
 p{
-  margin:11px 0;
+  //margin:10px 0;
   letter-spacing: .5px;
-  word-break: break-all;
-  word-wrap: break-word;
-  line-height: 1.6;
+  //line-height: 1.6px;
   &:first-child{
     margin-top: 0;
   }
@@ -229,6 +236,5 @@ select::-ms-value {
   color: currentColor; /* Internet Explorer 11+ */
 }
 img {
-  object-fit: cover;
   border-style: none; /* Remove border when inside `a` element in IE 8/9/10 */
 }
