--- a/dev/src/plugins/mew/src/scss/attributes/index.scss
+++ b/dev/src/plugins/mew/src/scss/attributes/index.scss
@@ -55,3 +55,8 @@
 @import "box.scss";
 @import "text.scss";
 @import "grid.scss";
+@import "color.scss";
+@import "flex.scss";
+@import "effect.scss";
+@import "other.scss";
+@import "cursor.scss";
