--- a/dev/src/components/prism/prism.css
+++ b/dev/src/components/prism/prism.css
@@ -1,3 +1,29 @@
+div.mew-prism{
+    position: relative;
+    background:rgba(0,0,0,.02);
+    border: 1px solid rgba(0,0,0,.1);
+    border-radius: 2px;
+    margin: 10px 0;
+}
+div.mew-prism i.mew-prism-cpy{
+    position: absolute;z-index: 99;
+    top: 14px;
+    right: 20px;
+    width: 16px;height: 18px;
+    cursor: pointer;
+}
+div.mew-prism i.mew-prism-cpy svg{
+    transform: scale(.85) translateX(-4px);
+}
+div.mew-prism i.mew-prism-cpy{
+    fill:#c4c4c4
+}
+div.mew-prism i.mew-prism-cpy:hover{
+    fill:#7a7a7a
+}
+div.mew-prism i.mew-prism-cpy:active{
+    fill:#d8d8d8
+}
 code[class*=language-],pre[class*=language-]{
     font-size: 14px;
     color:#000;
@@ -9,11 +35,10 @@ code[class*=language-],pre[class*=language-]{
     word-break:normal;word-wrap:normal;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;hyphens:none}
 code[class*=language-] ::-moz-selection,code[class*=language-]::-moz-selection,pre[class*=language-] ::-moz-selection,pre[class*=language-]::-moz-selection{
     text-shadow:none;
-    background:black
 }
 code[class*=language-] ::selection,code[class*=language-]::selection,pre[class*=language-] ::selection,pre[class*=language-]::selection{
     text-shadow:none;
-    background:black
+    background-color: rgba(0,0,0,0.1);
 }
 @media print{
     code[class*=language-],pre[class*=language-]{
@@ -21,14 +46,12 @@ code[class*=language-] ::selection,code[class*=language-]::selection,pre[class*=
     }
 }
 pre[class*=language-]{
-    border: 1px solid rgba(0,0,0,.1);
-    padding:1em;margin:.5em 0;overflow:auto
+    padding:.6em 1em .7em 1em;margin:.5em 0;overflow:auto
 }
 :not(pre)>code[class*=language-],pre[class*=language-]{
-    background:rgba(0,0,0,.02)
+    /*background:rgba(0,0,0,.02)*/
 }
 :not(pre)>code[class*=language-]{
-    border-radius:0;
     padding:.1em;
     hite-space:normal
 }
