--- a/dev/src/plugins/mew/src/scss/attributes/reset.scss
+++ b/dev/src/plugins/mew/src/scss/attributes/reset.scss
@@ -5,21 +5,18 @@
   hyphens: auto;
 }
 html {
+  font-family:"PingFang SC",Arial,"Microsoft YaHei","微软雅黑","Hiragino Sans GB",sans-serif;
   -webkit-text-size-adjust: 100%; /* Prevent adjustments of font size after orientation changes in iOS */
+  letter-spacing: .6px;
   word-break: normal;
   -moz-tab-size: 4;
+  line-height: .8; // 为便于单行文字水平对齐，使用低行高
+  font-size: 15px;
   tab-size: 4;
   width: 100vw;height: 100vh;
   scroll-behavior: smooth!important;
-  font-family:"PingFang SC",Arial,"Microsoft YaHei","微软雅黑","Hiragino Sans GB",sans-serif;
-  color: rgba(0,0,0,.88);
-  font-size: 15px;
-  letter-spacing: .4px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-h1,h2,h3,h4,h5,h6{
-  //font-family: Arial,"Hiragino Sans GB";
 }
 body{
   width: 100%;height: 100%;
@@ -53,7 +50,7 @@ small {
 }
 a{
   background-color: transparent; /* Remove the gray background on active links in IE 10 */
-  color: #1976d2;
+  //color: #1976d2;
   cursor: pointer;
   text-decoration: none;
   &:hover{
@@ -61,39 +58,42 @@ a{
     text-decoration: underline;
   }
   &:visited{
-    color: #1976d2;
+    //color: #1976d2;
   }
   &:active{
     outline-width: 0;
   }
   &:link{
-    color: #1976d2;
+    //color: #1976d2;
   }
 }
 code, kbd, q, pre, samp {
   font-family: monospace; /* Specify the font family of code elements */
 }
 kbd,q{
-  opacity: .7;
+  opacity: .8;
   font-family: Roboto,Arial;
-  line-height: 1.2;
   text-decoration: none;
-  padding:1px 6px 2px 6px;
+  padding: 1px 6px 0 6px;
   border-radius: 3px;
   letter-spacing: .5px;
-  background-color: rgba(0,0,0,.07);
-  border: .4px solid rgba(0,0,0,.1);
+  line-height: 1.3;
   &::before{
+    position: absolute;z-index: -1;
+    left: 0;top: 0;width: 100%;height:100%;
+    border: .4px solid #ccd7e2;
+    background-color: rgba(0,0,0,.02);
+    border-radius: 2px;
     content: '';
   }
   &::after{
     content: '';
   }
 }
-
 p{
-  margin:12px 0 0 0;
-  line-height: 1.8;
+  --mt:18;
+  --lh:1.8;
+  display: block;
   text-align: justify;
   &:first-child{
     margin-top: 0;
@@ -152,7 +152,7 @@ input:focus,textarea:focus{
 }
 
 button, input, optgroup, select, textarea {
-  font: inherit; /* Specify font inheritance of form elements */
+  //font: inherit; /* Specify font inheritance of form elements */
 }
 optgroup {
   font-weight: bold; /* Restore the font weight unset by the previous rule */
@@ -166,7 +166,7 @@ button,
 [type="submit"],
 [role="button"] {
   cursor: pointer;
-  color: inherit;
+  background-color: transparent;
 }
 
 /* Remove inner padding and border in Firefox 4+ */
@@ -216,6 +216,7 @@ ol,ul,li{
 li{
   list-style-position: inside;
   padding: 4px 0;
+  line-height: 1.4;
   &::marker{
     font-size: 10px;
     display: inline-block;
@@ -229,9 +230,6 @@ i{
 // IE 修复
 details, main {
   display: block; /* Render the `main` element consistently in IE. */
-}
-button {
-  overflow: visible; /* Address `overflow` set to `hidden` in IE 8/9/10/11 */
 }
 button, select {
   //padding: 2px 10px;
