--- a/dev/src/views/documentation/headbar/scss/headbar.scss
+++ b/dev/src/views/documentation/headbar/scss/headbar.scss
@@ -6,15 +6,21 @@ div#headbar{
   background-color: rgba(0,88,142,1);
   overflow: hidden;
   display: flex;
+  line-height: 1.4;
   &::before{
     position: absolute;top: 0;
     z-index: -1;
     display: block;content: '';
     width: 100%;
     height: 100%;
-    //background: linear-gradient(0deg,rgba(55,61,68,.5) 10%,rgba(55,61,68,0) 100%);
-    //background: linear-gradient(0deg,rgba(0,64,103,0) 0%, rgba(0,88,142,.9) 100%);
     background: linear-gradient(0deg,rgba(0,50,76,.6) 30%,rgba(55,61,68,0) 100%);
+  }
+  &.dark{
+    background-color: rgba(0,0,0,.5);
+    &::before{
+      filter: saturate(0);
+      //background: none;
+    }
   }
   div.leftBox{
     width: 36vw;height: 100%;
