--- a/dev/src/views/documentation/sidebar/scss/sidebar.scss
+++ b/dev/src/views/documentation/sidebar/scss/sidebar.scss
@@ -1,6 +1,6 @@
 div#sidebar{
   position: relative;
-  border-right: 1px solid rgba(55,61,68,.1);
+  //border-right: 1px solid rgba(55,61,68,.1);
   width: 36vw;
   min-width: 190px;
   margin-top: 20px;
@@ -9,6 +9,7 @@ div#sidebar{
   -ms-overflow-style: none;
   overflow: -moz-scrollbars-none;
   overflow-y: scroll;
+  line-height: 1.3;
   &::-webkit-scrollbar{
     width: 0;
   }
@@ -31,7 +32,7 @@ div#sidebar{
         letter-spacing: 2px;
         padding: 0 14px;
         font-size: 13px;
-        color: rgba(0,0,0,.4);
+        //color: rgba(0,0,0,.4);
         margin: 3px 0 8px 0;
       }
       ul{
@@ -41,7 +42,6 @@ div#sidebar{
           a{
             font-family: "Droid Sans Mono";
             position: relative;
-
             display: flex;
             font-weight: bold;
             padding: .5px 15px 1.5px 15px;
@@ -50,6 +50,9 @@ div#sidebar{
               color: black;
               text-decoration: none;
               background: rgba(239, 240, 245,.8);
+            }
+            &.dark:hover{
+              background: rgba(255, 255, 255,.04);
             }
             &:visited{
               color: rgba(0,0,0,.5);
@@ -61,7 +64,7 @@ div#sidebar{
               }
             }
             div.prefix{
-              color: rgba(0,0,0,.5);
+              //color: rgba(0,0,0,.5);
               font-size: 14px;
               height: 26px;
               line-height: 27px;
@@ -71,7 +74,7 @@ div#sidebar{
               display: flex;justify-content: space-between;
             }
             div.suffix{
-              color: rgba(0,0,0,.4);
+              //color: rgba(0,0,0,.4);
               display: flex;justify-content: space-between;
               height: 26px;
               line-height: 27px;
