--- a/dev/src/plugins/mew/src/scss/attributes/text.scss
+++ b/dev/src/plugins/mew/src/scss/attributes/text.scss
@@ -1,3 +1,4 @@
+
 //字体大小
 //xs-fs 12 14 16 18 20
 //sm-fs 22 24 26 28 30
@@ -14,15 +15,16 @@
   //--lh:false;
   line-height: var(--lh);
 }
+
 //字体大小-BEGIN-
-[xl]{--xfs:30;--fs:0}
-[lg]{--xfs:24;--fs:0}
-[md]{--xfs:19;--fs:0}
-[sm]{--xfs:14;--fs:0}
-[xs]{--xfs:12;--fs:0}
+[xl]{--xfs:30!important;--fs:0}
+[lg]{--xfs:24!important;--fs:0}
+[md]{--xfs:19!important;--fs:0}
+[sm]{--xfs:14!important;--fs:0}
+[xs]{--xfs:12!important;--fs:0}
 @for $i from 1 through 25 {
   [fs-#{$i}]{
-    --fs:#{$i}
+    --fs:#{$i}!important
   }
 }
 //字体大小-END-
