--- a/dev/src/components/prism/prism.css
+++ b/dev/src/components/prism/prism.css
@@ -1,3 +1,8 @@
+body[mew-theme="dark"] div.mew-prism{
+    background:rgba(255,255,255,.03);
+    border: 1px solid rgba(255,255,255,.1);
+}
+body[mew-theme="dark"] .token.atrule,body[mew-theme="dark"] .token.attr-value,body[mew-theme="dark"] .token.keyword{color:#00a4ea}
 div.mew-prism{
     position: relative;
     background:rgba(0,0,0,.02);
@@ -26,9 +31,9 @@ div.mew-prism i.mew-prism-cpy:active{
 }
 code[class*=language-],pre[class*=language-]{
     font-size: 14px;
-    color:#000;
+    color:var(--theme);
     background:0 0;
-    text-shadow:0 1px #fff;
+    /*text-shadow:0 1px #fff;*/
     font-family:Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace;
     text-align:left;
     white-space:pre;word-spacing:normal;
@@ -62,7 +67,7 @@ pre[class*=language-]{
 .token.namespace{opacity:.7}
 .token.boolean,.token.constant,.token.deleted,.token.number,.token.property,.token.symbol,.token.tag{color:#905}
 .token.attr-name,.token.builtin,.token.char,.token.inserted,.token.selector,.token.string{color:#690}
-.language-css .token.string,.style .token.string,.token.entity,.token.operator,.token.url{color:#9a6e3a;background:hsla(0,0%,100%,.5)}
+.language-css .token.string,.style .token.string,.token.entity,.token.operator,.token.url{color:#9a6e3a;}
 .token.atrule,.token.attr-value,.token.keyword{color:#07a}
 .token.class-name,.token.function{color:#dd4a68}
 .token.important,.token.regex,.token.variable{color:#e90}
