--- a/dev/src/plugins/mew/src/scss/attributes/reset.scss
+++ b/dev/src/plugins/mew/src/scss/attributes/reset.scss
@@ -81,7 +81,7 @@ kbd,q{
   &::before{
     position: absolute;z-index: -1;
     left: 0;top: 0;width: 100%;height:100%;
-    border: .4px solid #ccd7e2;
+    border: .4px solid rgba(180,200,220,.3);
     background-color: rgba(0,0,0,.02);
     border-radius: 2px;
     content: '';
@@ -220,7 +220,7 @@ li{
   &::marker{
     font-size: 10px;
     display: inline-block;
-    color: rgba(0,0,0,.5);
+    color: rgba(150,150,150,.8);
   }
 }
 i{
