--- a/dev/src/plugins/mew/src/scss/attributes/test.scss
+++ b/dev/src/plugins/mew/src/scss/attributes/test.scss
@@ -38,7 +38,7 @@
       position: absolute;content: '';
       left: -.5px;top: -.5px;
       width: calc(100% + 1px);height: calc(100% + 1px);
-      border: .5px solid rgba(0,0,0,.1);
+      //border: .5px solid rgba(0,0,0,.1);
     }
   }
   &:active{
