--- a/dev/src/views/home/scss/home.scss
+++ b/dev/src/views/home/scss/home.scss
@@ -172,7 +172,7 @@ div.doc-home{
       width: 100%;
     }
     div.whitespace{
-      height: 1000px;
+      height: 30vh;
       //min-height: calc(100% - 590px);
     }
     div.button{
