--- a/release/mew/src/scss/attributes/test.scss
+++ b/release/mew/src/scss/attributes/test.scss
@@ -55,7 +55,7 @@
   //--f:rgba(0,0,0,.1);--o:rgba(173,230,255,.3);
   //background: linear-gradient(45deg, var(--f) 25%, var(--o) 0, var(--o) 50%, var(--f) 0, var(--f) 75%, var(--o) 0);
   //background-size:5px 5px;
-  background: url("../../assets/bg_foo.png");
+  background: url("./bg_foo.png");
   background-size:5px 5px;
   //border: .5px solid #c8d7e4;
   border: .5px solid rgba(0,0,0,.14);
@@ -64,7 +64,7 @@
   position: relative;
   &::before{
     position: absolute;content:'';display: block;top: 0;left: 0;width: 100%;height: 100%;
-    background: url("../../assets/bg_bar.png");
+    background: url("./bg_bar.png");
     background-size:5px 5px;
   }
   //border: .5px solid #f1dadb;
